--- a/app/templates/piano.html
+++ b/app/templates/piano.html
@@ -2,9 +2,10 @@
 
 {% block head %}
     {{ super() }}
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}"> -->
     <script src="https://cdn.jsdelivr.net/npm/vexflow/build/cjs/vexflow.js"></script>
-    <script src="{{url_for('static', filename='finetune.js')}}" defer></script>
+    <!-- took out 'defer' -->
+    <script src="{{url_for('static', filename='finetune.js')}}"></script>
     <script type="text/javascript">
         let baseURL = "{{ url_for('main.index') }}"
         let high_score = '{{ high_score }}'
