--- a/app/templates/piano.html
+++ b/app/templates/piano.html
@@ -61,7 +61,8 @@
 </div>
 {% endblock %}
 
-<script src="{{url_for('static', filename='finetune.js')}}"></script>
+{% block javascript %}
+
 <script type="text/javascript">
     let baseURL = "{{ url_for('main.index') }}";
     let high_score = '{{ high_score }}';
@@ -70,3 +71,9 @@
         NOTES.push('{{note.name}}');
     '{% endfor %}'
 </script>
+
+<script src="{{url_for('static', filename='finetune.js')}}"></script>
+
+{% endblock %}
+
+
