--- a/app/templates/piano.html
+++ b/app/templates/piano.html
@@ -61,7 +61,7 @@
 </div>
 {% endblock %}
 
-{% block javascript %}
+{% block scripts %}
 
 <script type="text/javascript">
     let baseURL = "{{ url_for('main.index') }}";
