--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -76,11 +76,11 @@
 </div>
 {% endblock %}
 
-{% block scripts %}
+<!-- {% block scripts %}
 {{ super() }}
 {{ moment.include_moment() }}
-{% endblock %}
+{% endblock %} -->
 
-<!-- <script nonce="{{ csp_nonce() }}">
+<script nonce="{{ csp_nonce() }}">
     {{ moment.include_moment() }}
-</script> -->
+</script>
