--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
     {{ super() }}
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="shortcut icon" href="#">
-    <script type = "text/JavaScript" src = "https://MomentJS.com/downloads/moment.js"></script>
+    <!-- <script type = "text/JavaScript" src = "https://MomentJS.com/downloads/moment.js"></script> -->
 {% endblock %}
 
 {% block title %}
@@ -76,6 +76,4 @@
     {% endblock %}
 </div>
 {% endblock %}
-
-
 
