--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -187,3 +187,14 @@
     border-radius: 25px;
     font-size: 2.5rem;
 }
+
+/* .email-text div {
+    margin: 30px;
+    font-family: hybrea,proxima-nova,'helvetica neue', helvetica, arial, geneva, sans-serif;;
+    font-size: small;
+}
+
+.email-text a {
+    text-decoration: none;
+    font-size: large;
+} */
