--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -38,7 +38,7 @@
     display: flex;
     justify-content: center;
     background-color: beige;
-    width: 500px;
+    width: 40%;
     margin: auto;
     border: 3px solid #73AD21;
     border-radius: 50px;
