--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -23,8 +23,10 @@
 .main-container {
     background-color: rgb(63, 111, 147);
     width: 100%;
-    height: 100vh;
-    padding: 50px;
+    min-height: 100vh;
+    padding: 30px;
+    margin: auto;
+    padding-bottom: 0px;
 }
 
 .game-container {
@@ -46,6 +48,10 @@
 
 }
 
+.forms-flexbox.play-btn {
+    width: 100%;
+}
+
 .form {
     width: 80%;
     margin: auto;
@@ -60,12 +66,25 @@
 
 .main-container .headers{
     color: white;
-    margin: 40px;
+    margin: 30px;
     display: flex;
     justify-content: center;
     font-family: Apple Chancery, cursive;
     text-shadow: 0 0 3px green;
     font-size: xxx-large;
+    text-align: center;
+}
+
+.headers .main-header{
+    color: beige;
+}
+
+.headers.cheat-sheet{
+    font-size: small;
+}
+.headers.cheat-sheet a{
+    color: beige;
+    font-style: italic;
 }
 
 #vexflow-space {
@@ -99,6 +118,15 @@
 .badge {
     font-size: 4rem;
     background-color: transparent;
+}
+
+.badge.level {
+    font-size: 3rem;
+}
+
+.levels {
+    display: flex;
+    justify-content: center;
 }
 
 .label {
@@ -189,13 +217,8 @@
     font-size: 2.5rem;
 }
 
-/* .email-text div {
-    margin: 30px;
-    font-family: hybrea,proxima-nova,'helvetica neue', helvetica, arial, geneva, sans-serif;;
-    font-size: small;
+.play-btn {
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
-.email-text a {
-    text-decoration: none;
-    font-size: large;
-} */
