--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,11 +27,18 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="/">Home</a></li>
                     {% if current_user.is_authenticated %}
+                    <li>
+                        <a href="/home">Home</a>
+                    </li>
                     <li>
                         <a href="{{ url_for('main.user', username=current_user.username) }}">
                             Profile
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('main.top_scores') }}">
+                            Top Scores
                         </a>
                     </li>
                     {% endif %}
