--- a/app/templates/piano.html
+++ b/app/templates/piano.html
@@ -3,7 +3,7 @@
 {% block head %}
     {{ super() }}
     <script src="https://cdn.jsdelivr.net/npm/vexflow/build/cjs/vexflow.js"></script>
-    <script src="{{url_for('static', filename='finetune.js')}}" defer></script>
+    <script src="{{url_for('static', filename='piano.js')}}" defer></script>
 {% endblock %}
 
 {% block title %}
