--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
 
         <div class="headers">
                 <div class="main-header">Welcome to finetune <br>
-                <h3> game that lets you practice piano site reading</h3></div>
+                <h3> game that lets you practice piano sight reading</h3></div>
         </div>
 
         <!-- container to place VexFlow music sheet -->
