--- a/app/templates/piano.html
+++ b/app/templates/piano.html
@@ -43,7 +43,7 @@
     <!-- <button id='btn-pause' type='button' class='btn btn-block btn-primary'>Pause</button> -->
     <div class="flexbox-buttons">
         <div class="btn-container"><a id="btn-pause" class="btn btn-default btn-success btn-lg .active btn-block">Start</a></div>
-        <div class="btn-container"><a id="btn-exit" data-baseurl="{{ url_for('main.exit', score='') }}" class="btn btn-default btn-success btn-lg .active btn-block">Exit</a></div>
+        <div class="btn-container"><a id="btn-exit" data-exiturl="{{ url_for('main.exit', score='') }}" class="btn btn-default btn-success btn-lg .active btn-block">Exit</a></div>
         <!-- btn-danger  btn-default-->
     </div>
 
