--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} {{super()}} finetune {% endblock %}
+{% block title %} finetune {% endblock %}
 {% block head %}
     {{super()}}
     <script src="https://cdn.jsdelivr.net/npm/vexflow/build/cjs/vexflow.js"></script>
@@ -8,20 +8,20 @@
 {% endblock %}
 
 {% block page_content %}
-    {{super()}}
 
-    <div class="game-container">
-
+        <!-- the top HEADER ON the page -->
         <div class="headers">
-                <div class="main-header">Welcome to finetune <br>
-                <h3> game that lets you practice piano sight reading</h3></div>
+                <div class="main-header">
+                    <h1>Welcome to finetune</h1> 
+                    <h3> game that lets you practice piano sight reading</h3>
+                </div>
         </div>
 
         <!-- container to place VexFlow music sheet -->
         <div id="vexflow-space"></div>
 
-        <div class="play-btn forms-flexbox">
-            <a class="btn btn-default btn btn-success btn-lg .active btn-block"
+        <div class="forms-flexbox">
+            <a class="btn btn-success btn-lg btn-block"
             {% if current_user.is_authenticated %}
                 href="{{url_for('main.home')}}" >Ready to Play?
             {% else %}
@@ -29,6 +29,5 @@
             {% endif %}
             </a>
         </div>
-    </div>
 
 {% endblock %}
