--- a/app/templates/top_scores.html
+++ b/app/templates/top_scores.html
@@ -1,52 +1,45 @@
 {% extends 'base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
-<!-- {% import "_macros.html" as macros %} -->
 
 {% block title %} {{super()}} Top Scores {% endblock %}
 {% block head %} {{super()}} {% endblock %}
 
 {% block page_content %}
-    {{super()}}
 
     <!-- Top scores -->
-    {% if top_users %}
     <div class="headers">Top Scores</div>
 
-    <div class="forms-flexbox">
-        <div class="form">
-
-            <table class="table">
-                <caption>click on the Username to go to Profile</caption>
-                <tbody>
-                    <tr>
-                        <th scope="col">Username</th>
-                        <th scope="col">Score</th>
-                    </tr>
-                    {% for user in top_users %}
+    {% if top_users %}
+        <div class="forms-flexbox">
+            <div class="table-container">
+                <table class="table">
+                    <caption>click on the Username to go to Profile</caption>
+                    <tbody>
+                        <tr>
+                            <th scope="col">Username</th>
+                            <th scope="col">Score</th>
+                        </tr>
+                        {% for user in top_users %}
                         <tr>
                             <td>
                                 <img class="img-rounded profile_thumbnail" src="{{ user.unicornify(size=32) }}">
                                 <a href="{{ url_for('main.user', username=user.username) }}"> {{ user.username }} </a>
                             </td>
-                            <td>{{ user.high_score }}</td>
+                            <td>
+                                {{ user.high_score }}
+                            </td>
                         </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
     {% endif %}
 
-    <div class="play-btn forms-flexbox">
+    <div class="forms-flexbox">
         <a class="btn btn-default btn btn-success btn-lg .active btn-block"
-            href="{{url_for('main.home')}}">Play again?</a>
+            href="{{url_for('main.home')}}">Play again?
+        </a>
     </div>
-
-    <!-- {% if pagination and pagination.pages > 1 %}
-    <div class="pagination">
-        {{ macros.pagination_widget(pagination, 'main.index') }}
-    </div>
-    {% endif %} -->
 
 {% endblock %}
