--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+body {
+    height: 100vh;
+}
+
 .profile-img-container {
     margin-top: 30px;
 }
@@ -82,17 +86,18 @@
 #vexflow-space {
     background-color: beige;
     display: flex;
-    /* justify-content: center; */
     align-items: center;
     border-radius: 50px;
     border: 3px solid #73AD21;
-    padding: 10px;
-    height: 310px;
+    padding-left: 10px;
+    padding-right: 15px;
+    /* height: 310px; */
+    height: 260px;
 }
 
 .play-scoreboard {
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
     justify-content: space-around;
     color: #73AD21;
@@ -136,14 +141,14 @@
 }
 
 .key {
-    height: calc(var(--width) * 3);
+    height: calc(var(--width) * 2.7);
     width: var(--width);
     text-align: center;
 }
 
 .noteLabel {
     position: relative;
-    bottom: -200px;
+    bottom: -190px;
     font-size: 1.5em;
     display: none;
     font-family: cursive;
