--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,7 +16,7 @@
 
         <div class="forms-flexbox">
                 <div class="levels">
-                    <input type="radio" id="basic" class="radio-btn" name="level" value="basic">
+                    <input type="radio" id="basic" class="radio-btn" name="level" value="basic" checked>
                     <label class="badge label" for="basic">Basic</label><br>
                     <input type="radio" id="treble" class="radio-btn" name="level" value="treble">
                     <label class="badge label" for="treble">Treble line</label><br>
