--- a/app/templates/piano.html
+++ b/app/templates/piano.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="cheat-sheet headers">
-        <p> Open <a href="{{url_for('static', filename='grand_staff.jpg')}}" target="_blank">Notes Cheat Sheet</a> for help</p>
+        <p> Open <a class="link" href="{{url_for('static', filename='grand_staff.jpg')}}" target="_blank">Notes Cheat Sheet</a> for help</p>
     </div>
 
 {% endblock %}
