--- a/app/templates/top_scores.html
+++ b/app/templates/top_scores.html
@@ -37,7 +37,7 @@
     {% endif %}
 
     <div class="forms-flexbox">
-        <a class="btn btn-default btn btn-success btn-lg .active btn-block"
+        <a class="btn btn-success btn-lg btn-block"
             href="{{url_for('main.home')}}">Play again?
         </a>
     </div>
