--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -6,6 +6,11 @@ body {
     background-color: rgb(63, 111, 147);
 }
 
+a, a:link, a:hover, a:visited, a:active {
+  color: inherit;
+  text-decoration: none;
+ }
+
 .navbar {
     background-color: ivory;
 }
@@ -61,12 +66,32 @@ body {
     /* margin-bottom: 25px; */
 }
 
+.btn {
+    color: ivory;
+}
+
+/* contains auth forms items */
+.form-container {
+    width: 80%;
+    margin: auto;
+    padding: 10px;
+}
+
+.form-container p {
+    margin-top: 20px;
+}
+
 /* Rendering high scores */
 .table-container {
     width: 80%;
     margin: auto;
     margin-top: 10px;
 
+}
+
+/* level sizing */
+.levels label {
+    font-size: 3rem;
 }
 
 .headers {
@@ -102,12 +127,18 @@ body {
     color: #73AD21;
 }
 
+/* score and timer digit counter */
+.badge {
+    font-size: 3.5rem;
+    background-color: transparent;
+}
+
 /* general label settings */
 .label {
     color: #73AD21;
     font-style: italic;
     font-family: cursive;
-    font-size: 3.5rem;
+    font-size: 4rem;
     background-color: transparent;
 }
 
@@ -115,12 +146,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-/* score and timer digit counter */
-.badge {
-    font-size: 3.5rem;
-    background-color: transparent;
 }
 
 /* changes the color of the counter depending if the score goes up or down */
@@ -143,6 +168,15 @@ body {
     height: calc(var(--width) * 2.7);
     width: var(--width);
     text-align: center;
+}
+
+/* displays color of the piano key depending if the user guessed coorectly or not */
+.key.correct {
+    background-color: #73AD21;
+}
+
+.key.wrong {
+    background-color: lightcoral;
 }
 
 .noteLabel {
@@ -168,15 +202,6 @@ body {
     border: 1px solid #333;
 }
 
-/* displays color of the piano key depending if the user guessed coorectly or not */
-.key.correct {
-    background-color: #73AD21;
-}
-
-.key.wrong {
-    background-color: lightcoral;
-}
-
 .black {
     --width: 52px;
     background-color: black;
@@ -185,9 +210,9 @@ body {
     z-index: 2;
 }
 
-.black.active {
+/* .black.active {
     background-color: #333;
-}
+} */
 
 /* the pause and exit buttons during play */
 .play-buttons-container {
@@ -211,8 +236,8 @@ body {
     font-size: small;
     margin-top: 20px;
 }
-.cheat-sheet a{
-    color: beige;
+
+.link:hover {
     font-style: italic;
 }
 
