--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="cheat-sheet headers">
-            <p> Open <a href="{{url_for('static', filename='grand_staff.jpg')}}" target="_blank">Notes Cheat Sheet</a> before you start if you need some help</p>
+            <p> Open <a class="link" href="{{url_for('static', filename='grand_staff.jpg')}}" target="_blank">Notes Cheat Sheet</a> before you start if you need some help</p>
         </div>
 
     <!-- {% if pagination and pagination.pages > 1 %}
